[project]
name = "power-control6g"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "cplex>=22.1.2.0",
    "docplex>=2.30.251",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=1.26.0",
    "pyqt5>=5.15.11",
    "setuptools>=75.8.0",
    "sionna>=1.0.2",
    "tqdm>=4.67.1",
]
